[package]
name = "lorica"
version = "1.5.2"
authors = ["Rwx-G"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/Rwx-G/Lorica"
description = """
A modern, secure, dashboard-first reverse proxy built in Rust.
"""
categories = ["asynchronous", "network-programming"]
keywords = ["async", "proxy", "http", "reverse-proxy", "lorica"]

[lib]
name = "lorica"
path = "src/lib.rs"

[[bin]]
name = "lorica"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "macros", "sync", "time", "net"] }
tokio-util = { version = "0.7", features = ["rt"] }
itoa = "1"
lorica-core = { version = "0.1.0", path = "../lorica-core", default-features = false }
lorica-http = { version = "0.1.0", path = "../lorica-http" }
lorica-timeout = { version = "0.1.0", path = "../lorica-timeout" }
lorica-lb = { version = "0.1.0", path = "../lorica-lb", optional = true, default-features = false }
lorica-proxy = { version = "0.1.0", path = "../lorica-proxy", optional = true, default-features = false }
lorica-config = { version = "1.5.2", path = "../lorica-config" }
lorica-api = { version = "1.5.2", path = "../lorica-api" }
lorica-error = { version = "0.1.0", path = "../lorica-error" }
lorica-tls = { version = "0.1.0", path = "../lorica-tls" }
lorica-worker = { version = "1.5.2", path = "../lorica-worker" }
lorica-command = { version = "1.5.2", path = "../lorica-command" }
lorica-shmem = { version = "1.5.2", path = "../lorica-shmem" }
lorica-waf = { version = "0.1.0", path = "../lorica-waf" }
lorica-notify = { version = "0.1.0", path = "../lorica-notify" }
lorica-limits = { version = "0.1.0", path = "../lorica-limits" }
lorica-cache = { version = "0.1.0", path = "../lorica-cache" }
lorica-geoip = { version = "1.5.2", path = "../lorica-geoip" }
lorica-challenge = { version = "1.5.2", path = "../lorica-challenge" }
once_cell = { workspace = true }
lorica-bench = { version = "1.5.2", path = "../lorica-bench" }
regex = "1"
# HTML sanitization for operator-supplied error_page_html (v1.5.0
# audit finding HIGH-1). Whitelist-based parser replaces the
# previous 3-pass regex - those are historically contournables
# via `<svg onload>`, HTML malformé, encoded bypasses. ammonia
# parses through html5ever, so the attack surface collapses onto
# what the Servo team already hardens.
ammonia = "4"
sha2 = "0.10"
bytes = "1"
# Async DNS resolver for the bot-protection rDNS bypass
# (v1.4.0 Epic 3 follow-up). Bumped 0.24 -> 0.26 in v1.5.2
# (audit L-15) for the CNAME-chain edge-case fixes that landed
# between 0.24 and 0.26. `tokio-runtime` feature only - we do
# not need the dnssec / dns-over-quic crates here. The 0.25
# release renamed `TokioAsyncResolver` -> `TokioResolver` ;
# the import in `bot_rdns.rs` follows.
hickory-resolver = { version = "0.26", default-features = false, features = ["system-config", "tokio"] }
lru = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "cookies", "json"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
# PEM parsing via the official rustls pki-types crate. Replaces
# rustls-pemfile (v1.5.0 audit HIGH-2: RUSTSEC-2025-0134, unmaintained).
# pki-types is maintained by the rustls team and its `pem_slice_iter`
# API is a 1:1 replacement for the old iterator. Advisory remains
# transitive via the forked lorica-tls crate; tracked upstream.
rustls-pki-types = { version = "1", features = ["alloc"] }
futures-util = "0.3"
arc-swap = "1"
dashmap = "6"
rand = "0.9"
parking_lot = "0.12"
argon2 = "0.5"
base64 = "0.22"
async-trait = { workspace = true }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
http = { workspace = true }
ipnet = "2"

# OpenTelemetry (feature-gated, off by default)
# Enabled via `--features otel`. Policy matches `route53` since v1.3.0
# supply-chain audit SC-M-3: non-OTel users do not pay the dep-graph cost.
opentelemetry = { version = "0.31", optional = true, default-features = false, features = ["trace", "internal-logs"] }
opentelemetry_sdk = { version = "0.31", optional = true, default-features = false, features = ["trace", "rt-tokio", "internal-logs"] }
opentelemetry-otlp = { version = "0.31", optional = true, default-features = false, features = ["trace", "http-proto", "grpc-tonic", "reqwest-blocking-client", "tls-ring", "tls-webpki-roots", "internal-logs"] }
opentelemetry-semantic-conventions = { version = "0.31", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true, default-features = false }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
# Serial-test barrier for the global VERDICT_CACHE state in
# `lorica::bot` (v1.5.0 backlog #16). The three tests that mutate
# the process-wide `DashMap` + `Mutex<VecDeque>` carry
# `#[serial(verdict_cache)]` so cargo test's parallel scheduler
# does not interleave them and produce a FIFO-ordering flake.
serial_test = "3"
async-trait = { workspace = true }
http = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
bytes = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rcgen = "0.13"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pki-types = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "circuit_breaker"
harness = false

[[bench]]
name = "canary_bucket"
harness = false

[[bench]]
name = "otel_overhead"
harness = false

[features]
default = ["rustls", "lb", "connection_filter"]

rustls = [
    "lorica-core/rustls",
    "lorica-proxy?/rustls",
    "lorica-lb?/rustls",
    "any_tls",
]

proxy = ["lorica-proxy"]
lb = ["lorica-lb", "proxy"]

time = []

connection_filter = [
    "lorica-core/connection_filter",
    "lorica-proxy?/connection_filter",
]

any_tls = []
patched_http1 = ["lorica-core/patched_http1"]
prometheus = ["lorica-core/prometheus"]

# Distributed tracing via OTLP export. Off by default.
# Enable with `cargo build --release --features otel`. See Cargo.toml
# section above for the exact crate versions pulled in.
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
    "dep:tracing-opentelemetry",
]
